--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 #sql
 spring.datasource.username=root
 spring.datasource.password=Root@123
-spring.datasource.url=jdbc:mysql://localhost:3306/qlbh
+spring.datasource.url=jdbc:mysql://localhost:3306/qlbh?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 
 spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl= true
