--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,11 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show-sql = true
 spring.jpa.show-sql = true
 
-
 secret.key = 123
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tuantienti952002@gmail.com
+spring.mail.password=rfbabkpvugfslstc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
